# browserfetch

./: .mcp.json  README.md  fetch.py  process.py  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
tests/: test_fetch.py  test_process.py  test_server.py  test_validate_url.py
