[project]
name = "webfetch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.14.3",
    "inscriptis>=2.7.0",
    "mcp>=1.26.0",
    "minify-html>=0.18.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "trafilatura>=2.0.0",
]
